--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -28,157 +28,183 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
-<h1>Most Rated Posts</h1>
-<div class="slideshow-container">
-    {% for post in top_rated_posts %}
-    <div class="mySlides fade">
-        {% if post.header_image %}
-        <img src="{{ post.header_image.url }}" style="width: 100px; height: 100px" alt="{{ post.title }}">
-        {% else %}
-        <img style="width: 100px; height: 100px" src="{% static 'blog/images/photo_by_default.jpg'%}">
-        {% endif %}
+<br/><br/>
+<div id="topRatedCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        {% for post in top_rated_posts %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <div class="card" style="width: 400px; height: auto">
+                <div class="card-image" style="position: relative; left: -300px">
+                    {% if post.header_image %}
+                    <img src="{{ post.header_image.url }}"
+                         style="width: 340px; height: 271.6px; transform: scale(1.4); border-radius: 15px">
+                    {% else %}
+                    <img src="{% static 'blog/images/photo_by_default.jpg'%}"
+                         style="width: 340px; height: 271.6px;transform: scale(1.4); border-radius: 15px">
+                    {% endif %}
+                </div>
+                <div style="position: relative; right: -150px; bottom: 70px; transform: scale(1.1)">
+                    <div style="display: flex">
+                        <div class="card-category" style="flex: 1">
+                            <p>{{ post.category }}</p>
+                        </div>
+                        <div class="card-date" style="flex: 1;">
+                            {{post.post_date}}
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ post.title }}</h5>
+                    </div>
+                    <div class="card-snippet">
+                        <p>
+                            {% if post.snippet|length > 200 %}
+                            {{ post.snippet|slice:":200" }}...
+                            {% else %}
+                            {{ post.snippet }}
+                            {% endif %}
+                        </p>
+                    </div>
+                    <div class="blog-author" style="position: relative; right: 75px; top: -10px">
+                        <div class="blog-author-img">
+                            {% if post.author.profile.profile_pic %}
+                            <img src="{{ post.author.profile.profile_pic.url }}">
+                            {% else %}
+                            <img src="{% static 'blog/images/default_profile_pic.webp' %}" class="card-img">
+                            {% endif %}
+                        </div>
+                        <div class="blog-author-text">
+                            <strong>{{ post.author.first_name }} {{ post.author.last_name }}</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="carousel-control-prev" href="#topRatedCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#topRatedCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
-<br>
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-    <span class="dot" onclick="currentSlide(4)"></span>
-</div>
-<script>
-    let slideIndex = 1;
-    showSlides(slideIndex);
-
-    // Next/previous controls
-    function plusSlides(n) {
-        showSlides(slideIndex += n);
-    }
-
-    // Thumbnail image controls
-    function currentSlide(n) {
-        showSlides(slideIndex = n);
-    }
-
-    function showSlides(n) {
-        let i;
-        let slides = document.getElementsByClassName("mySlides");
-        let dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {
-            slideIndex = 1
-        }
-        if (n < 1) {
-            slideIndex = slides.length
-        }
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none"; // Сначала скрываем все изображения
-        }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex - 1].style.display = "block"; // Показываем только текущее изображение
-        dots[slideIndex - 1].className += " active";
-    }
-</script>
 <style>
-    * {
-        box-sizing: border-box
+    #topRatedCarousel .carousel-inner .carousel-item {
+        text-align: left;
     }
 
-    /* Slideshow container */
-    .slideshow-container {
-        max-width: 1000px;
-        position: relative;
+    #topRatedCarousel .carousel-inner .card {
+        width: 300px;
         margin: auto;
+        border: none;
+        background: none;
     }
 
-    /* Hide the images by default */
-    .mySlides {
-        display: none;
+    #topRatedCarousel .carousel-inner .card-image {
+        height: 100px;
+        width: 100px;
     }
 
-    /* Next & previous buttons */
-    .prev, .next {
+    #topRatedCarousel .carousel-inner .card-date {
+        box-sizing: border-box;
+        color: rgb(153, 153, 153);
+        font-family: Poppins, sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        text-size-adjust: 100%;
+        line-height: 21px;
+        position: relative;
+        bottom: -9px;
+        left: -10px;
+
+    }
+
+    #topRatedCarousel .carousel-inner .card-category {
+        box-sizing: border-box;
+        color: rgb(34, 34, 34);
         cursor: pointer;
-        position: absolute;
-        top: 50%;
-        width: auto;
-        margin-top: -22px;
-        padding: 16px;
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
+        font-family: Poppins, sans-serif;
+        font-size: 14px;
+        line-height: 21px;
+        font-weight: 600;
+        text-size-adjust: 100%;
+        margin-left: 20px;
+        margin-bottom: -30px;
+        position: relative;
+        bottom: -9px;
     }
 
-    /* Position the "next button" to the right */
-    .next {
-        right: 0;
-        border-radius: 3px 0 0 3px;
-    }
-
-    /* On hover, add a black background color with a little bit see-through */
-    .prev:hover, .next:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    /* Caption text */
-    .text {
-        color: #f2f2f2;
-        font-size: 15px;
-        padding: 8px 12px;
-        position: absolute;
-        bottom: 8px;
-        width: 100%;
-        text-align: center;
-    }
-
-    /* Number text (1/3 etc) */
-    .numbertext {
-        color: #f2f2f2;
-        font-size: 12px;
-        padding: 8px 12px;
-        position: absolute;
-        top: 0;
-    }
-
-    /* The dots/bullets/indicators */
-    .dot {
+    #topRatedCarousel .carousel-inner .card-title {
+        box-sizing: border-box;
         cursor: pointer;
-        height: 15px;
-        width: 15px;
-        margin: 0 2px;
-        background-color: #bbb;
+        font-family: Poppins, sans-serif;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 36px;
+        width: 500px;
+        color: rgb(34, 34, 34);
+        text-size-adjust: 100%;
+    }
+
+    #topRatedCarousel .carousel-inner .card-snippet {
+        color: rgb(136, 136, 136);
+        box-sizing: border-box;
+        display: block;
+        font-family: Poppins, sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21px;
+        margin-block-end: 16px;
+        text-size-adjust: 100%;
+        width: 550px;
+        margin-top: -20px;
+        margin-left: 20px;
+        position: relative;
+        top: -6px;
+    }
+
+    #topRatedCarousel .carousel-control-prev,
+    #topRatedCarousel .carousel-control-next {
+        width: 50px;
+        height: 50px;
+        background-color: #333;
         border-radius: 50%;
-        display: inline-block;
-        transition: background-color 0.6s ease;
+        border: 2px solid white;
+        transition: all ease 0.3s;
     }
 
-    .active, .dot:hover {
-        background-color: #717171;
+    #topRatedCarousel .carousel-control-prev {
+        position: relative;
+        left: -100px;
+        top: -200px;
     }
 
-    /* Fading animation */
-    .fade {
-        animation-name: fade;
-        animation-duration: 1.5s;
+    #topRatedCarousel .carousel-control-next {
+        position: relative;
+        left: 1150px;
+        top: -225px;
+
     }
 
-    @keyframes fade {
-        from {
-            opacity: .4
-        }
-        to {
-            opacity: 1
-        }
+    #topRatedCarousel .carousel-control-prev-icon,
+    #topRatedCarousel .carousel-control-next-icon {
+        border: none
+    }
+
+
+    #topRatedCarousel .carousel-control-prev:hover,
+    #topRatedCarousel .carousel-control-next:hover {
+        background: #333;
+        transition: all ease 0.3s;
     }
 </style>
-<div style="display: flex">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div style="display: flex; margin-top: -85px">
     <div style="flex: 1">
         <main>
             <section id="blog" style="position: relative; left: -120px">
@@ -280,7 +306,7 @@
         </main>
     </div>
 
-    <div style="flex: 1; position: relative; right: 10px; bottom: -135px">
+    <div style="flex: 1; position: relative; right: 10px; bottom: -135px; margin-top: -20px">
         <div class="category">
             <h3>Post Categories</h3>
             <div class="category-list">
