--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -42,14 +42,62 @@
     <p>{{ post.author.first_name }} {{ post.author.last_name }}</p>
     <span>{{ post.post_date }}</span>
 </div>
-<br/><br/>
+<br/>
+
 <div class="article-title">
     <h1>{{ post.title }}</h1>
+</div>
+<br/>
+
+<div class="rating">
+    {% for top_post in rated_posts %}
+    {% if top_post.id == post.id %}
+    <span class="post-rating"
+          style="position: relative; bottom: 13px; font-weight: normal">Place: {{ forloop.counter }}</span>
+    {% if forloop.first %}
+    <i class="fa-solid fa-trophy"
+       style="margin-left: 15px; position: relative; bottom: 15px; transform: scale(1.2); color: goldenrod;" title="winner by reactions"></i>
+    {% endif %}
+    {% if forloop.counter == 2 %}
+    <i class="fa-solid fa-trophy"
+       style="margin-left: 13px; position: relative; bottom: 15px; transform: scale(1.2); color: silver;"></i>
+    {% endif %}
+    {% if forloop.counter == 3 %}
+    <i class="fa-solid fa-trophy"
+       style="margin-left: 13px; position: relative; bottom: 15px; transform: scale(1.2); color: #cd7f32;"></i>
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+
 </div>
 <div class="article-snippet">
     {{ post.snippet }}
 </div>
 <style>
+    /*.post-rating {*/
+    /*    color: rgb(153, 153, 153);*/
+    /*    font-size: 22px;*/
+    /*    text-size-adjust: 100%;*/
+    /*    box-sizing: border-box;*/
+    /*    line-height: 21px;*/
+    /*    font-family: Poppins, sans-serif;*/
+    /*    position: relative;*/
+    /*    left: 5px;*/
+    /*}*/
+
+    .rating {
+        box-sizing: border-box;
+        color: rgb(153, 153, 153);
+        display: block;
+        font-family: Poppins, sans-serif;
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 40.8px;
+        text-size-adjust: 100%;
+        text-align: center;
+        margin-right: 40px;
+    }
+
     .blog-author {
         display: flex;
         justify-content: center;
@@ -340,8 +388,9 @@
     <textarea name="body" placeholder="Write your comment here" rows="3"
               style="padding: 8px; border: 1px solid #ccc; border-radius: 20px; font-family: 'Nunito', sans-serif; font-size: 16px; width: 700px; height: 50px;"></textarea>
 
-    <button type="submit" style="background: none; border: none; margin-left: 15px; position: relative; top: -16px "><i class="fa-solid fa-paper-plane"
-                                                                    style="transform: scale(1.5)"></i></button>
+    <button type="submit" style="background: none; border: none; margin-left: 15px; position: relative; top: -16px "><i
+            class="fa-solid fa-paper-plane"
+            style="transform: scale(1.5)"></i></button>
 </form>
 {% else %}
 <p>Log in to your account to add comments. <a href="{% url 'login' %}">Login</a></p>
