--- a/myblog/blog/templates/our_team.html
+++ b/myblog/blog/templates/our_team.html
@@ -13,15 +13,153 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-{% extends 'base.html' %}
+<body>
+
 {% load static %}
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
+
+    footer {
+        position: absolute;
+        bottom: 0;
+
+    }
+
+    .title h4 {
+        display: inline-block;
+        padding: 20px;
+        color: #585757;
+        font-size: 50px;
+        font-weight: 500;
+        letter-spacing: 1.2px;
+        word-spacing: 5px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        text-transform: uppercase;
+        backdrop-filter: blur(15px);
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        word-wrap: break-word;
+    }
+
+    .wrapper .card_Container {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 40px 0;
+    }
+
+    .card_Container .card {
+        position: relative;
+
+        top: -40px;
+        width: 330px;
+        height: 350px;
+        margin: 20px;
+        overflow: hidden;
+        box-shadow: 0 30px 30px -20px rgba(0, 0, 0, 1),
+        inset 0 0 0 1000px rgba(67, 52, 109, .6);
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card .imbBx, .imbBx img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card .content {
+        position: absolute;
+        bottom: -160px;
+        width: 100%;
+        height: 160px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        backdrop-filter: blur(15px);
+        box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        transition: bottom 0.5s;
+        transition-delay: 0.65s;
+    }
+
+    .card:hover .content {
+        bottom: 0;
+        transition-delay: 0s;
+    }
+
+    .content .contentBx h3 {
+        text-transform: uppercase;
+        color: #fff;
+        letter-spacing: 2px;
+        font-weight: 500;
+        font-size: 18px;
+        text-align: center;
+        margin: 20px 0 15px;
+        line-height: 1.1em;
+        transition: 0.5s;
+        transition-delay: 0.6s;
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    .card:hover .content .contentBx h3 {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .content .contentBx h3 span {
+        font-size: 12px;
+        font-weight: 300;
+        text-transform: initial;
+    }
+
+    .content .sci {
+        position: relative;
+        bottom: 10px;
+        display: flex;
+    }
+
+    .content .sci li {
+        list-style: none;
+        margin: 0 10px;
+        transform: translateY(40px);
+        transition: 0.5s;
+        opacity: 0;
+        transition-delay: calc(0.2s * var(--i));
+    }
+
+    .card:hover .content .sci li {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    .content .sci li a {
+        color: #fff;
+        font-size: 24px;
+    }
+</style>
 <div class="wrapper">
-
-    <div class="title">
-        <h4>Our Team Section</h4>
-    </div>
-
     <div class="card_Container">
 
         <div class="card">
@@ -118,8 +256,167 @@
                 </ul>
             </div>
         </div>
+        <div class="card">
+
+            <div class="imbBx">
+                <img src="{% static 'blog/images/team5.jpg'%}" alt="">
+            </div>
+
+            <div class="content">
+                <div class="contentBx">
+                    <h3>Tammy Blanchard <br><span>Web Designer</span></h3>
+                </div>
+                <ul class="sci">
+                    <li style="--i: 1">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li style="--i: 2">
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                    </li>
+                    <li style="--i: 3">
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+
+            <div class="imbBx">
+                <img src="{% static 'blog/images/team6.jpg'%}" alt="">
+            </div>
+
+            <div class="content">
+                <div class="contentBx">
+                    <h3>Zak Bolton <br><span>Python Software Engineer</span></h3>
+                </div>
+                <ul class="sci">
+                    <li style="--i: 1">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li style="--i: 2">
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                    </li>
+                    <li style="--i: 3">
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+
+            <div class="imbBx">
+                <img src="{% static 'blog/images/team7.jpg'%}" alt="">
+            </div>
+
+            <div class="content">
+                <div class="contentBx">
+                    <h3>Shayla Chaney
+                        <br><span>Back-End Web Developer</span></h3>
+                </div>
+                <ul class="sci">
+                    <li style="--i: 1">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li style="--i: 2">
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                    </li>
+                    <li style="--i: 3">
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+
+            <div class="imbBx">
+                <img src="{% static 'blog/images/team8.webp'%}" alt="">
+            </div>
+
+            <div class="content">
+                <div class="contentBx">
+                    <h3>Warren Wilkinson <br><span>Machine Learner</span></h3>
+                </div>
+                <ul class="sci">
+                    <li style="--i: 1">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li style="--i: 2">
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                    </li>
+                    <li style="--i: 3">
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
+<!--<footer>-->
+<!--    <br/>-->
+<!--    <div class="row container" style="margin-left: 155px">-->
+<!--        <div>-->
+<!--            <img src="{% static 'blog/images/logo1.png' %}" style="transform: scale(1.4)">-->
+<!--            <div class="text" style="color: silver">-->
+<!--                <p>EchoVerse</p>-->
+<!--                <p>for the best</p>-->
+<!--            </div>-->
+<!--            <ul class="footer-social-links">-->
+<!--                <li class="flex">-->
+<!--                    <a href="#"><i class="fab fa-facebook-f"></i></a>-->
+<!--                </li>-->
+
+<!--                <li class="flex">-->
+<!--                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>-->
+<!--                </li>-->
+
+<!--                <li class="flex">-->
+<!--                    <a href="#"><i class="fab fa-instagram"></i></a>-->
+<!--                </li>-->
+
+<!--                <li class="flex">-->
+<!--                    <a href="#"><i class="fab fa-google"></i></a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <h3 class="lg-text">Information</h3>-->
+<!--            <div class="footer-links">-->
+<!--                <a href="{% url 'about_us' %}">About Us</a>-->
+<!--                <a href="{% url 'privacy_policy' %}">Privacy Policy</a>-->
+<!--                <a href="{% url 'contact_us' %}">Contact Us</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <h3 class="lg-text">Our partners</h3>-->
+<!--            <div class="footer-links">-->
+<!--                <a href="https://medium.com/">Medium</a>-->
+<!--                <a href="https://www.blogger.com/">Blogger</a>-->
+<!--                <a href="https://twitter.com/">Twitter</a>-->
+<!--                <a href="https://copyblogger.com/">Copyblogger</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <h3 class="lg-text">Have a question?</h3>-->
+<!--            <div class="footer-contact-info">-->
+<!--                <div>-->
+<!--                    <span><i class="fas fa-map-marker-alt"></i></span>-->
+<!--                    <span>701 Lake Parker, Street, MerryLand, USA</span>-->
+<!--                </div>-->
+
+<!--                <div>-->
+<!--                    <span><i class="fas fa-phone"></i></span>-->
+<!--                    <span>1240-322-3422</span>-->
+<!--                </div>-->
+
+<!--                <div>-->
+<!--                    <span><i class="fas fa-paper-plane"></i></span>-->
+<!--                    <span>info@echoverse.com</span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <p class="footer-text">Copyright &copy; 2024. Blog. All Rights Reserved.</p>-->
+<!--</footer>-->
 {% endblock %}
 </body>
 </html>
